<package>
  <name>display</name>
  <version>1.0.1</version>
  <description>
    ROS integration for OLED display
  </description>
  <maintainer email="sampsa.ranta@gmail.com">Sampsa Ranta</maintainer>
  <author>Sampsa Ranta</author>
  <license>BSD</license>

  <url type="website">None</url>
  <url type="repository">None</url>
  <url type="bugtracker">None</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vesc_msgs</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>vesc_msgs</run_depend>
  
  <export>
    <architecture_independent/>
  </export>
</package>
